@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.034.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.041.
 use strict;
 use warnings;
 
@@ -13,7 +13,6 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "Finance-Google-Portfolio",
-  "EXE_FILES" => [],
   "LICENSE" => "perl",
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Finance::Google::Portfolio",
@@ -34,9 +33,10 @@ my %WriteMakefileArgs = (
     "IPC::Open3" => 0,
     "Test::More" => 0,
     "Test::Most" => 0,
+    "blib" => "1.01",
     "constant" => 0
   },
-  "VERSION" => "1.02",
+  "VERSION" => "1.03",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -45,7 +45,6 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Carp" => 0,
-  "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "HTML::Form" => 0,
   "IO::Handle" => 0,
@@ -56,6 +55,7 @@ my %FallbackPrereqs = (
   "Test::More" => 0,
   "Test::Most" => 0,
   "URI" => 0,
+  "blib" => "1.01",
   "constant" => 0,
   "namespace::clean" => 0,
   "strict" => 0,
