@@ -1,6 +1,7 @@
 Revision history for Finance::Google::Portfolio
 
 {{$NEXT}}
+        - Patch to support Google's new two-page web sign-in process
 
 1.02      2015-05-05 11:37:56-07:00 America/Los_Angeles
         - Remove need for bindings to Perl v5.20
